WIP for https://github.com/gintool/gin/issues/29
Also some minor fixes for other compiler warnings.